bk_ida/gccida/c0/do_jump_by_parts_greater_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10220:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10254:36: error: invalid suffix 'orce' on integer constant
op0_word = operand_sub*(short *)0xforce( op0, nwords - 1 - i, mode); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10254:12: error: use of undeclared identifier 'operand_sub'
op0_word = operand_sub*(short *)0xforce( op0, nwords - 1 - i, mode); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10255:36: error: invalid suffix 'orce' on integer constant
op1_word = operand_sub*(short *)0xforce( op1, nwords - 1 - i, mode); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10255:12: error: use of undeclared identifier 'operand_sub'
op1_word = operand_sub*(short *)0xforce( op1, nwords - 1 - i, mode); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10259:65: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( op0_word, op1_word, GT, v8, *(short *)0xmode, 0LL, 0LL, if_true_labela); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/expr.c:10260:72: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( op0_word, op1_word, NE, unsignedp, *(short *)0xmode, 0LL, 0LL, if_false_labela); 
                                                                       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater_rtx/src/obj/expr.o] Error 1
